Files reconfigured to read list.csv and return it on the table